// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expressions should parse arrays 1`] = `
"(async function () {
    try {
        let $_x = [
            1,
            2,
            3,
            4
        ];
        for (let $_word of [
                \`lorem\`,
                \`ipsum\`,
                \`dolor\`
            ]) {
            term.echo($_word);
        }
        for (let $_i of [
                1,
                2,
                3
            ]) {
            term.echo($_i);
        }
    } catch (e) {
        term.error(e);
    }
}());"
`;

exports[`expressions should parse dictionaries 1`] = `
"(async function () {
    try {
        let $_dict = {};
        let $_dict = {
            [\`foo\`]: 10,
            [\`bar\`]: \`hello\`,
            [\`baz\`]: [
                1,
                2,
                3
            ],
            [\`quux\`]: {
                [\`1\`]: 10,
                [\`2\`]: 20,
                [\`3\`]: 30
            }
        };
    } catch (e) {
        term.error(e);
    }
}());"
`;

exports[`expressions should parse property access 1`] = `
"(async function () {
    try {
        term.echo($_dict[$_i]);
        term.echo(await term.get($_dict[\`hello\`]));
        term.echo(await term.get($_dict[\`hello_\` + 10]));
        $_dict[$_i] = 10;
        $_dict[$_i] = { [\`foo\`]: 10 };
        $_dict[$_i][\`hello\`][\`world\`][$_nice];
    } catch (e) {
        term.error(e);
    }
}());"
`;

exports[`expressions should parse property access 2`] = `
"(async function () {
    try {
        $_dict[$_i] = 10;
        $_dict[$_i] = { [\`foo\`]: 10 };
        $_dict[10 + 10] = \`hello \${ $_bar }\`;
    } catch (e) {
        term.error(e);
    }
}());"
`;

exports[`expressions should use command as part of expression 1`] = `
"(async function () {
    try {
        await term.echo_2(await term.get(\`https://jcubic.pl/file.txt\`), 100);
        term.echo(\`<white>\` + await term.ask(\`? \`) + \`</white>\`);
    } catch (e) {
        term.error(e);
    }
}());"
`;

exports[`functions should compile function calls 1`] = `
"(async function () {
    try {
        async function $_global($_message) {
            term.echo($_message);
            if ($$__m = String($_message).match(/hello/)) {
                await $_show_hello();
            }
        }
        async function $_show_hello() {
            term.echo(\`hello\`);
        }
        await $_global(\`hello\`);
    } catch (e) {
        term.error(e);
    }
}());"
`;

exports[`functions should compile function definitions 1`] = `
"(async function () {
    try {
        async function $_foo($_arg) {
            if ($$__m = String($_arg).match(/foo/)) {
                return 10 + 10;
            }
        }
        async function $_login($_username) {
            term.echo(\`what's up?\`);
            if ($$__m = String($_username).match(/root/)) {
                return await term.ask($_username + \`# \`);
            } else {
                return await term.ask($_username + \`$ \`);
            }
        }
    } catch (e) {
        term.error(e);
    }
}());"
`;

exports[`functions should create factorial function 1`] = `
"(async function () {
    try {
        async function $_factorial($_n) {
            if ($_n <= 0) {
                return 1;
            } else {
                return $_n * await $_factorial($_n - 1);
            }
        }
    } catch (e) {
        term.error(e);
    }
}());"
`;

exports[`if statements should compile base if 1`] = `
"(async function () {
    try {
        if ($$__m = String($$__m[1]).match(/foo/)) {
            let $_command = await term.ask(\`? \`);
            if ($$__m = String($_commad).match(/bar/)) {
                term.echo($$__m[1]);
            }
        }
    } catch (e) {
        term.error(e);
    }
}());"
`;

exports[`if statements should compile if_else 1`] = `
"(async function () {
    try {
        if ($$__m = String($$__m[1]).match(/foo/)) {
            let $_command = await term.ask(\`? \`);
            if ($$__m = String($_commad).match(/(bar)/g)) {
                term.echo($$__m[1]);
            } else if ($$__m = String($_command).match(/(baz)/g)) {
                term.echo($$__m[1]);
            } else {
                term.echo(\`NOP\`);
            }
        } else {
            term.echo(\`NOP\`);
        }
    } catch (e) {
        term.error(e);
    }
}());"
`;

exports[`if statements should compile multiple if_else  1`] = `
"(async function () {
    try {
        if ($$__m = String($$__m[1]).match(/foo/)) {
            let $_command = await term.ask(\`? \`);
            if ($$__m = String($_commad).match(/(bar)/g)) {
                term.echo($$__m[1]);
            } else if ($$__m = String($_command).match(/(baz)/g)) {
                term.echo($$__m[1]);
            } else {
                term.echo(\`NOP\`);
            }
        } else {
            term.echo(\`NOP\`);
        }
        let $_command = await term.ask(\`? \`);
        if ($$__m = String($_command).match(/foo/)) {
            term.echo(\`1\`);
        } else if ($$__m = String($_command).match(/bar/)) {
            term.echo(\`2\`);
        } else {
            term.echo(\`3\`);
        }
    } catch (e) {
        term.error(e);
    }
}());"
`;

exports[`if statements should compile multiple if_else with expressions 1`] = `
"(async function () {
    try {
        term.echo(\`hello\` + \` world\`);
        let $_command = await term.ask(\`? \`);
        if ($$__m = String($_command).match(/(foo)/)) {
            let $_command = await term.ask(\`? \`);
            let $_foo = 30 * 30 / 2;
            10 * 10 + 3;
            if ($$__m = String($_commad).match(/(bar)/)) {
                term.echo($$__m[1] + \`foo\`);
                let $_bar = 10 + 10 * 20;
                let $_baz = 30 * 30 / 2;
            } else {
                let $_quux = 30 * 30 / 2 * 3;
                10 * 10 / 2;
            }
        }
    } catch (e) {
        term.error(e);
    }
}());"
`;

exports[`loop should parse break 1`] = `
"(async function () {
    try {
        let $_x = 0;
        while (true) {
            $_x = $_x + 1;
            if ($_x > 10) {
                break;
            }
            term.echo($_x);
        }
    } catch (e) {
        term.error(e);
    }
}());"
`;

exports[`loop should parse continue 1`] = `
"(async function () {
    try {
        for (let $_i of [
                1,
                2,
                3,
                4,
                5,
                6,
                7
            ]) {
            if ($_i % 2 === 0) {
                continue;
            }
            term.echo($_i);
        }
    } catch (e) {
        term.error(e);
    }
}());"
`;

exports[`loop should parse for loops 1`] = `
"(async function () {
    try {
        for (let $_chr of \`hello\`) {
            term.echo($_chr);
        }
        for (let $_chr of location.href) {
            term.echo($_chr);
        }
    } catch (e) {
        term.error(e);
    }
}());"
`;

exports[`loop should parse while loops 1`] = `
"(async function () {
    try {
        let $_x = 10;
        while ($_x > 0) {
            term.echo(\`NUM: \${ $_x }\`);
            $_x = $_x - 1;
        }
    } catch (e) {
        term.error(e);
    }
}());"
`;
